web interface for incremental updates

--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -5,3 +5,5 @@ imagemagick
 xsltproc
 sudo apt-get install libxml-dom-perl
 sudo apt-get install libxml-dom-xpath-perl
+
+check /etc/ImageMagick/policy.xml to switch on PDF reading
